--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="ar.com.example.chatExample.ui.auth.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        android:label="Login"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_signUpFragment"
             app:destination="@id/signUpFragment"
@@ -66,6 +66,9 @@
             app:argType="string" />
         <argument
             android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="userToken"
             app:argType="string" />
     </fragment>
 </navigation>
